-- Copyright   : (C) Ivan Perez, 2012-2013; (C) Keera Studios Ltd, 2013
-- License     : All Rights Reserved
-- Maintainer  : support@keera.co.uk
--
cabal-version:       >= 1.10
build-type:          Simple

name:                gtk-helpers
version:             0.1.0
author:              Ivan Perez
maintainer:          ivan.perez@keera.co.uk
homepage:            http://keera.co.uk/blog/community
license:             BSD3
license-file:        LICENSE
copyright:
  (C) 2012-2013 Ivan Perez
  (C) 2013-2020 Keera Studios Ltd
category:            Graphics
synopsis:            A collection of auxiliary operations and widgets related to Gtk+
description:         A collection of auxiliary operations and widgets related to Gtk+.
stability:           Experimental
extra-source-files:  README

source-repository head
  type:                 git
  location:             git@github.com:keera-studios/gtk-helpers.git

-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual: True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual: True

library

  exposed-modules:
    Data.Board.GameBoardIO
    Game.Board.BasicTurnGame
    Graphics.UI.Gtk.Board.BoardLink
    Graphics.UI.Gtk.Board.TiledBoard
    Graphics.UI.Gtk.Entry.FormatEntry
    Graphics.UI.Gtk.Entry.HighlightedEntry
    Graphics.UI.Gtk.Extra.Builder
    Graphics.UI.Gtk.Extra.BuilderTH
    Graphics.UI.Gtk.Helpers.Combo
    Graphics.UI.Gtk.Helpers.FileDialog
    Graphics.UI.Gtk.Helpers.MenuItem
    Graphics.UI.Gtk.Helpers.MessageDialog
    Graphics.UI.Gtk.Helpers.ModelViewNotebookSync
    Graphics.UI.Gtk.Helpers.ModelViewPath
    Graphics.UI.Gtk.Helpers.Multiline.TextBuffer
    Graphics.UI.Gtk.Helpers.Pixbuf
    Graphics.UI.Gtk.Helpers.TreeView
    Graphics.UI.Gtk.Layout.BackgroundContainer
    Graphics.UI.Gtk.Layout.DummyBin
    Graphics.UI.Gtk.Layout.EitherWidget
    Graphics.UI.Gtk.Layout.MaybeWidget
    Graphics.UI.Gtk.StreamChart
    System.Application

  build-depends:
      base >= 4 && < 5
    , template-haskell
    , process
    , cairo
    , gtk
    , gio
    , glib
    , mtl
    , array

  default-language:
    Haskell2010

  hs-source-dirs:
    src/

  ghc-options:
    -Wall


test-suite hlint

  type:
    exitcode-stdio-1.0

  main-is:
    hlint.hs

  default-language:
    Haskell2010

  hs-source-dirs:
    tests

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
        base
      , hlint >= 1.7

-- Verify that the code is thoroughly documented
test-suite haddock-coverage

  type:
    exitcode-stdio-1.0

  main-is:
    HaddockCoverage.hs

  default-language:
    Haskell2010

  hs-source-dirs:
    tests

  ghc-options:
    -Wall

  if !flag(test-doc-coverage)
    buildable: False
  else
    build-depends:
        base >= 4 && < 5
      , directory
      , filepath
      , process
      , regex-posix
